--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.1"
+    "react-native": "0.59.1",
+    "react-native-radio-buttons-group": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
